--- a/Trabalho_est_comp.Rmd
+++ b/Trabalho_est_comp.Rmd
@@ -145,90 +145,235 @@ fim_atendimento
 
 
 
-
 ```{r}
-set.seed(123)
-
-# Parâmetros
-lambda_chegada <- 5 / 60    # chegadas por minuto
-lambda_atendimento <- 7 / 60  # atendimentos por minuto
-tempo_limite <- 10 * 60     # 10 horas em minutos
-
-# Inicializar variáveis
-tempo_total <- 0
-tempo_chegada <- c()
-
-# Simular tempos de chegada até completar 10 horas
-while (tempo_total < tempo_limite) {
-  tempo_proxima_chegada <- rexp(1, rate = lambda_chegada)
-  tempo_total <- tempo_total + tempo_proxima_chegada
-  if (tempo_total <= tempo_limite) {
-    tempo_chegada <- c(tempo_chegada, tempo_total)
-  }
-}
-
-# Número de clientes
-n_clientes <- length(tempo_chegada)
-
-# Gerar tempos de atendimento
-tempos_atendimento <- rexp(n_clientes, rate = lambda_atendimento)
-
-# Inicializar vetores
-inicio_atendimento <- numeric(n_clientes)
-fim_atendimento <- numeric(n_clientes)
-tempo_espera <- numeric(n_clientes)
-tamanho_fila <- numeric(n_clientes)
-
-# Variável para controlar o fim do atendimento anterior
-fim_atendimento_anterior <- 0
-
-# Variável para controlar o tamanho atual da fila
-fila_atual <- 0
-
-# Loop para processar cada cliente
-for (i in 1:n_clientes) {
+sim_fila <- function(lambda_chegada, lambda_atendimento, tempo_expediente){
   
-  # Chegada do cliente
-  chegada <- tempo_chegada[i]
-  
-  # Quantos atendimentos foram concluídos antes dessa chegada?
-  if (i == 1) {
-    atendimentos_concluidos <- 0
-  } else {
-    atendimentos_concluidos <- sum(fim_atendimento[1:(i-1)] <= chegada)
+  tempo_total <- 0
+  chegadas <- c()
+
+
+
+  #Gerar chegadas em um dia de expediente
+  while (tempo_total < tempo_expediente) {
+    tempo_proxima_chegada <- rexp(1, rate = lambda_chegada)
+    tempo_total <- tempo_total + tempo_proxima_chegada
+    if (tempo_total <= tempo_expediente) {
+      chegadas <- c(chegadas, tempo_total)
+    }
   }
   
-  # Fila atual = número de chegadas até agora - número de atendimentos concluídos
-  fila_atual <- i - atendimentos_concluidos - 1  # -1 pois o cliente i acabou de chegar
+  #Total de chegadas no dia 
+  Total_chegadas <- length(chegadas)
   
-  # Armazena tamanho da fila no momento da chegada do cliente i
-  tamanho_fila[i] <- fila_atual
   
-  # Define início e fim do atendimento
-  inicio_atendimento[i] <- max(chegada, fim_atendimento_anterior)
-  fim_atendimento[i] <- inicio_atendimento[i] + tempos_atendimento[i]
+  #Gerar tempo de atendimento para cada chegada
+  tempo_atendimento <- rexp(Total_chegadas, rate = lambda_atendimento)
   
-  # Tempo de espera
-  tempo_espera[i] <- inicio_atendimento[i] - chegada
+  #Primeiro atendimento
   
-  # Atualiza fim do atendimento anterior
-  fim_atendimento_anterior <- fim_atendimento[i]
+  inicio_atendimento <-  numeric(Total_chegadas)
+  fim_atendimento <-  numeric(Total_chegadas)
+  fila_atual <-  numeric(Total_chegadas)
+  
+ 
+
+
+  inicio_atendimento[1] <- chegadas[1]
+
+  atendimentos_feitos <- 0
+  fila_atual[1] <- 0
+
+  fim_atendimento[1] <- inicio_atendimento[1] + tempo_atendimento[1]
+  
+  for (i in 2:Total_chegadas){
+    
+
+    atendimentos_feitos <- sum(fim_atendimento <= chegadas[i] & fim_atendimento > 0)
+
+    fila_atual[i] <- (i-1) - atendimentos_feitos
+
+
+    inicio_atendimento[i] <- max(max(fim_atendimento) ,chegadas[i])
+
+
+
+    fim_atendimento[i] <- inicio_atendimento[i] + tempo_atendimento[i]
+
+
+    
+  }
+  
+  return (fila_atual)
+  
 }
-
-# 📊 Resultados
-cat("Número de clientes atendidos em 10 horas:", n_clientes, "\n")
-cat("Tempo médio de espera (minutos):", round(mean(tempo_espera), 2), "\n")
-cat("Tempo máximo de espera (minutos):", round(max(tempo_espera), 2), "\n")
-cat("Tamanho máximo da fila formada:", max(tamanho_fila), "clientes\n")
-
-# 📈 Gráfico do tamanho da fila ao longo dos atendimentos
-plot(tempo_chegada, tamanho_fila, type = "s", col = "purple",
-     xlab = "Tempo (minutos)", ylab = "Tamanho da fila",
-     main = "Evolução do tamanho da fila durante o expediente")
 ```
 
+```{r}
+fila <- sim_fila(5/60,4/60,600)
 
 
+plot(fila)
+```
+
+ #### 1.Forneça um código para geração das filas e ilustre o uso em diferentes cenários.
+ 
+ 
+```{r}
+atend_menor <-  sim_fila(lambda_chegada = 5/60,
+                         lambda_atendimento = 3/60,
+                          tempo_expediente = 600)
+
+
+atend_igual <-  sim_fila(lambda_chegada = 5/60,
+                         lambda_atendimento = 5/60,
+                          tempo_expediente = 600)
+
+
+atend_maior <-  sim_fila(lambda_chegada = 5/60,
+                         lambda_atendimento = 7/60,
+                          tempo_expediente = 600)
+
+
+plot(atend_menor, type = "l", col = "red", lwd = 2,
+     xlab = "Ordem de chegada", ylab = "Tamanho da fila",
+     main = "Comparativo de Tamanho da Fila em Diferentes Cenários",
+     ylim = range(c(atend_menor, atend_igual, atend_maior)))  # para ajustar o eixo y
+
+# Adicionar as outras duas linhas no mesmo gráfico
+lines(atend_igual, col = "blue", lwd = 2)
+lines(atend_maior, col = "green", lwd = 2)
+
+
+
+```
+ 
+
+
+
+```{r}
+# Simulações — 3 de cada cenário
+atend_menor_1 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 5/60, tempo_expediente = 600)
+atend_menor_2 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 5/60, tempo_expediente = 600)
+atend_menor_3 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 5/60, tempo_expediente = 600)
+atend_menor_4 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 5/60, tempo_expediente = 600)
+atend_menor_5 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 5/60, tempo_expediente = 600)
+
+atend_igual_1 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 10/60, tempo_expediente = 600)
+atend_igual_2 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 10/60, tempo_expediente = 600)
+atend_igual_3 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 10/60, tempo_expediente = 600)
+atend_igual_4 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 10/60, tempo_expediente = 600)
+atend_igual_5 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 10/60, tempo_expediente = 600)
+
+atend_maior_1 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 15/60, tempo_expediente = 600)
+atend_maior_2 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 15/60, tempo_expediente = 600)
+atend_maior_3 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 15/60, tempo_expediente = 600)
+atend_maior_4 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 15/60, tempo_expediente = 600)
+atend_maior_5 <- sim_fila(lambda_chegada = 10/60, lambda_atendimento = 15/60, tempo_expediente = 600)
+
+
+ylim_total <- range(c(atend_menor_1, atend_menor_2, atend_menor_3, atend_menor_4, atend_menor_5,
+                      atend_igual_1, atend_igual_2, atend_igual_3, atend_igual_4, atend_igual_5,
+                      atend_maior_1, atend_maior_2, atend_maior_3, atend_maior_4, atend_maior_5))
+
+plot(atend_menor_1, type = "l", col = "red", lwd = 2,
+     ylim = ylim_total,
+     xlab = "Ordem de chegada", ylab = "Tamanho da fila",
+     main = "Comparativo de 3 simulações por cenário")
+
+# Adicionar as demais
+lines(atend_menor_2, col = "red", lwd = 2)
+lines(atend_menor_3, col = "red", lwd = 2)
+lines(atend_menor_4, col = "red", lwd = 2)
+lines(atend_menor_5, col = "red", lwd = 2)
+
+lines(atend_igual_1, col = "blue", lwd = 2)
+lines(atend_igual_2, col = "blue", lwd = 2)
+lines(atend_igual_3, col = "blue", lwd = 2)
+lines(atend_igual_4, col = "blue", lwd = 2)
+lines(atend_igual_5, col = "blue", lwd = 2)
+
+lines(atend_maior_1, col = "green", lwd = 2)
+lines(atend_maior_2, col = "green", lwd = 2)
+lines(atend_maior_3, col = "green", lwd = 2)
+lines(atend_maior_4, col = "green", lwd = 2)
+lines(atend_maior_5, col = "green", lwd = 2)
+
+# Adicionar legenda
+
+```
+
+```{r}
+# Definir layout de 2x2 plots
+par(mfrow = c(2, 2))
+
+# Gráfico 1 — todos os cenários juntos
+plot(atend_menor_1, type = "l", col = "red", lwd = 2, ylim = ylim_total,
+     main = "Todas as simulações", xlab = "Ordem", ylab = "Tamanho da fila")
+lines(atend_menor_2, col = "red", lwd = 2)
+lines(atend_menor_3, col = "red", lwd = 2)
+lines(atend_menor_4, col = "red", lwd = 2)
+lines(atend_menor_5, col = "red", lwd = 2)
+
+lines(atend_igual_1, col = "blue", lwd = 2)
+lines(atend_igual_2, col = "blue", lwd = 2)
+lines(atend_igual_3, col = "blue", lwd = 2)
+lines(atend_igual_4, col = "blue", lwd = 2)
+lines(atend_igual_5, col = "blue", lwd = 2)
+
+lines(atend_maior_1, col = "green", lwd = 2)
+lines(atend_maior_2, col = "green", lwd = 2)
+lines(atend_maior_3, col = "green", lwd = 2)
+lines(atend_maior_4, col = "green", lwd = 2)
+lines(atend_maior_5, col = "green", lwd = 2)
+
+# Gráfico 2 — Atendimentos Menor
+plot(atend_menor_1, type = "l", col = "red", lwd = 2, ylim = ylim_total,
+     main = "Atendimento Menor", xlab = "Ordem", ylab = "Tamanho da fila")
+lines(atend_menor_2, col = "red", lwd = 2)
+lines(atend_menor_3, col = "red", lwd = 2)
+lines(atend_menor_4, col = "red", lwd = 2)
+lines(atend_menor_5, col = "red", lwd = 2)
+
+# Gráfico 3 — Atendimento Igual
+plot(atend_igual_1, type = "l", col = "blue", lwd = 2, ylim = ylim_total,
+     main = "Atendimento Igual", xlab = "Ordem", ylab = "Tamanho da fila")
+lines(atend_igual_2, col = "blue", lwd = 2)
+lines(atend_igual_3, col = "blue", lwd = 2)
+lines(atend_igual_4, col = "blue", lwd = 2)
+lines(atend_igual_5, col = "blue", lwd = 2)
+
+# Gráfico 4 — Atendimento Maior
+plot(atend_maior_1, type = "l", col = "green", lwd = 2, ylim = ylim_total,
+     main = "Atendimento Maior", xlab = "Ordem", ylab = "Tamanho da fila")
+lines(atend_maior_2, col = "green", lwd = 2)
+lines(atend_maior_3, col = "green", lwd = 2)
+lines(atend_maior_4, col = "green", lwd = 2)
+lines(atend_maior_5, col = "green", lwd = 2)
+
+# Reset layout
+par(mfrow = c(1, 1))
+```
+
+#### Estude a distribuição amostral do tamanho mediano da fila.
+
+
+```{r}
+med_tend_maior <- replicate(10000, median(sim_fila(lambda_chegada = 10/60,
+                                                lambda_atendimento = 5/60,
+                                                tempo_expediente = 600)))
+
+
+hist(med_tend_maior)
+```
+
+```{r}
+max_tend_maior <- replicate(10000, max(sim_fila(lambda_chegada = 10/60,
+                                                lambda_atendimento = 5/60,
+                                                tempo_expediente = 600)))
+
+
+hist(max_tend_maior)
+```
 
 
 
